# papers

./: .gitignore
CFM/: commands.tex  header.tex  master.bib  rapport.tex  slides.tex
CFM/img/: Sans titre.xcf  domain.xcf  force.xcf  scheme.xcf
HPEC/: Template.tex  commands.tex  header.tex  header_slide.tex  master.bib  rapport.tex  slides.tex
InvMet/: Lorenz.m  RK4.c  RK4.m  RK4_adjoint.c  model.mw  question6.m  question8.m
InvMet/TP/: tp.tex
InvMet/paper/: commands.tex  header.tex  invmet.xcf  pres.tex  tp.tex
InvMet/paper/img/: flow.xcf  invmet.xcf  particules.xcf
InvMet/rapport/: rapport.tex
geometry/: rapport.tex
levelset/: rapport.tex
wavelets/: .gitignore  CMakeLists.txt  README.md  main.m
wavelets/papers/: url
wavelets/readme/: header.tex  readme.tex
wavelets/report/: commands.tex  header.tex  slides.tex
wavelets/results/: results.ods
wavelets/scripts/: main.m  plot.py  plot2D.py  plotFamilies.py  wavelets.mw
wavelets/slides/: commands.tex  master.bib  slides.tex
wavelets/slides/img/: tree_example.xcf
wavelets/src/: animation.cpp  bench.cpp  binaryTreeNode.hpp  integerGrid.hpp  interval.hpp  main.cpp
wavelets/src/gnuplot/: affineTransformation.hpp  gnuplot.hpp  plotBox.hpp  plotUtils.hpp
wavelets/src/sample/: functionSample.hpp  point.hpp  randomSample.hpp  sample.hpp
wavelets/src/tree/: binaryTreeNode.hpp  integerGrid.hpp  treeNode.hpp  waveletTree.hpp
wavelets/src/utils/: config.hpp.in  consts.hpp  defines.hpp  globals.cpp  globals.hpp  headers.hpp  utils.cpp  utils.hpp
wavelets/src/utils/maths/: matrix.cpp  matrix.hpp  vec.hpp  vec2.hpp  vec3.hpp  vecBool.hpp
wavelets/src/utils/random/: rand.cpp  rand.hpp
wavelets/src/wavelets/: deslaurierDubuc.hpp  deslaurierDubucUtils.cpp  deslaurierDubucUtils.hpp  interval.hpp  wavelet.hpp  waveletMapper.hpp
